--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>SnailURL</title>
+    <link rel="stylesheet" href="./fonts/Righteous/righteous.css">
     <link rel="stylesheet" href="./style.css">
     <script src="./urlParameters.js"></script>
     <script src="./userSystem.js"></script>
