Add large redirect notice
When SnailURL redirects, the page will have a large sign at the bottom that says "Redirecting..." for at least one half second.

--- a/home.html
+++ b/home.html
@@ -25,5 +25,8 @@
       <button onclick="window.close()">Cancel</button>
       <button onclick="location.assign(urlParameters.get('r'))" id="go now">Go Now</button>
     </div>
+    <div id="notice">
+      Redirecting...
+    </div>
   </body>
 </html>
