Program redirect system
Both the redirect and the timed redirect work now.  A countdown timer is displayed.  The "goNow" button is usually available while the timer is counting down, but if you don't want someone to be able to skip the timer you can include the URL parameter `&goNow=disabled` to remove this button and hide the redirect link.

--- a/home.html
+++ b/home.html
@@ -11,8 +11,9 @@
   <body onload="setup()">
     <h1>SnailURL</h1>
     <div id="sign_in" class="hidden">
-      <h2>Plase sign in to continue:</h2>
-      <label for="name">Your Name:</label>
+      <p>The page you are trying to access is only available to certain people.</p>
+      <p>Plase sign in to continue:</p>
+      <label for="name">Your Username:</label>
       <input id="name" type="text" oninput="user.setName(this.value)">
       <button onclick="location.reload()">Submit</button>
     </div>
@@ -23,7 +24,7 @@
       <div id="time" class="box"><i>unknown</i></div> 
       seconds.<br><br>
       <button onclick="window.close()">Cancel</button>
-      <button onclick="location.assign(urlParameters.get('r'))" id="go now">Go Now</button>
+      <button onclick="redirect()" id="go now">Go Now</button>
     </div>
     <div id="notice">
       Redirecting...
