Double-ensure cancel button works.
`window.close()` is supposed to close the tab, but it sometimes simply doesn't.  For this reason, the tab will first try to go back to the previous page in history, and then try to close itself if there was no previous page, and then, if neither of those worked, the tab will redirect to `about:blank`.

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
       in 
       <div id="time" class="box"><i>unknown</i></div> 
       seconds.<br><br>
-      <button onclick="window.close()">Cancel</button>
+      <button onclick="history.go(-1);window.close();location.assign('about:blank')">Cancel</button>
       <button onclick="redirect()" id="go now">Go Now</button>
     </div>
     <div id="notice">
