Add name checking system

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
       <p>Plase sign in to continue:</p>
       <label for="name">Your Username:</label>
       <input id="name" type="text" oninput="user.setName(this.value)">
-      <button onclick="location.reload()">Submit</button>
+      <button onclick="tryName()">Submit</button>
     </div>
     <div id="gateway" class="hidden">
       <p>You need a password to access the page you are trying to get to.</p>
