--- a/home.html
+++ b/home.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="./fonts/Righteous/righteous.css">
     <link rel="stylesheet" href="./style.css">
     <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="./urlParameters.js"></script>
-    <script src="./userSystem.js"></script>
-    <script src="./setup.js"></script>
+    <script src="./scripts/urlParameters.js"></script>
+    <script src="./scripts/userSystem.js"></script>
+    <script src="./scripts/setup.js"></script>
   </head>
   <body onload="setup()">
     <h1>SnailURL</h1>
