--- a/home.html
+++ b/home.html
@@ -3,12 +3,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>SnailURL</title>
-    <link rel="stylesheet" href="./fonts/Righteous/righteous.css">
-    <link rel="stylesheet" href="./style.css">
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
-    <script src="./scripts/urlParameters.js"></script>
-    <script src="./scripts/userSystem.js"></script>
-    <script src="./scripts/setup.js"></script>
+    <link rel="stylesheet" type="text/css" href="./fonts/Righteous/righteous.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <script src="https://smtpjs.com/v3/smtp.js" type="text/javascript"></script>
+    <script src="./scripts/urlParameters.js" type="text/javascript"></script>
+    <script src="./scripts/userSystem.js" type="text/javascript"></script>
+    <script src="./scripts/setup.js" type="text/javascript"></script>
   </head>
   <body onload="setup()">
     <h1>SnailURL</h1>
