--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
     <script src="./scripts/urlParameters.js" type="text/javascript"></script>
     <script src="./scripts/userSystem.js" type="text/javascript"></script>
     <script src="./scripts/setup.js" type="text/javascript"></script>
+    <script src="./scripts/snail.js" type="text/javascript"></script>
   </head>
   <body onload="setup()" onresize="resize()">
     <div id="content">
