--- a/home.html
+++ b/home.html
@@ -8,7 +8,7 @@
     <script src="./scripts/setup.js" type="text/javascript"></script>
     <script src="./scripts/snail.js" type="text/javascript"></script>
   </head>
-  <body onload="setup()" onresize="resize()">
+  <body onload="setup()">
     <div id="content">
       <h1>SnailURL</h1>
       <section id="sign_in" class="hidden">
